--- a/resort webpage/src/index.css
+++ b/resort webpage/src/index.css
@@ -290,6 +290,10 @@ a {
   .section-padding {
     padding: 5rem 0;
   }
+  .row {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
 }
 
 /* Floating Actions panel */
